# EasyVDF

./: CMakeLists.txt  EasyVDF.h  binary.vdf  linux_eol.vdf  macos_eol.vdf  windows_eol.vdf
.github/workflows/: main.yml
tests/: test.cpp  tests.cpp
